// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remax render change elements' order 1`] = `
Object {
  "children": Array [
    7,
  ],
  "id": 0,
  "nodes": Object {
    "7": Object {
      "children": Array [
        2,
        4,
        6,
      ],
      "id": 7,
      "nodes": Object {
        "2": Object {
          "children": Array [
            1,
          ],
          "id": 2,
          "nodes": Object {
            "1": Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "4": Object {
          "children": Array [
            3,
          ],
          "id": 4,
          "nodes": Object {
            "3": Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "6": Object {
          "children": Array [
            5,
          ],
          "id": 6,
          "nodes": Object {
            "5": Object {
              "id": 5,
              "text": "3",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render change elements' order 2`] = `
Object {
  "children": Array [
    7,
  ],
  "id": 0,
  "nodes": Object {
    "7": Object {
      "children": Array [
        4,
        2,
        6,
      ],
      "id": 7,
      "nodes": Object {
        "2": Object {
          "children": Array [
            1,
          ],
          "id": 2,
          "nodes": Object {
            "1": Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "4": Object {
          "children": Array [
            3,
          ],
          "id": 4,
          "nodes": Object {
            "3": Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "6": Object {
          "children": Array [
            5,
          ],
          "id": 6,
          "nodes": Object {
            "5": Object {
              "id": 5,
              "text": "3",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render change elements' order 3`] = `
Object {
  "children": Array [
    7,
  ],
  "id": 0,
  "nodes": Object {
    "7": Object {
      "children": Array [
        4,
        6,
        2,
      ],
      "id": 7,
      "nodes": Object {
        "2": Object {
          "children": Array [
            1,
          ],
          "id": 2,
          "nodes": Object {
            "1": Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "4": Object {
          "children": Array [
            3,
          ],
          "id": 4,
          "nodes": Object {
            "3": Object {
              "id": 3,
              "text": "2",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "6": Object {
          "children": Array [
            5,
          ],
          "id": 6,
          "nodes": Object {
            "5": Object {
              "id": 5,
              "text": "3",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render insert new element 1`] = `
Object {
  "children": Array [
    5,
  ],
  "id": 0,
  "nodes": Object {
    "5": Object {
      "children": Array [
        2,
        4,
      ],
      "id": 5,
      "nodes": Object {
        "2": Object {
          "children": Array [
            1,
          ],
          "id": 2,
          "nodes": Object {
            "1": Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "4": Object {
          "children": Array [
            3,
          ],
          "id": 4,
          "nodes": Object {
            "3": Object {
              "id": 3,
              "text": "3",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render insert new element 2`] = `
Object {
  "children": Array [
    5,
  ],
  "id": 0,
  "nodes": Object {
    "5": Object {
      "children": Array [
        2,
        7,
        4,
      ],
      "id": 5,
      "nodes": Object {
        "2": Object {
          "children": Array [
            1,
          ],
          "id": 2,
          "nodes": Object {
            "1": Object {
              "id": 1,
              "text": "1",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "4": Object {
          "children": Array [
            3,
          ],
          "id": 4,
          "nodes": Object {
            "3": Object {
              "id": 3,
              "text": "3",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
        "7": Object {
          "children": Array [
            6,
          ],
          "id": 7,
          "nodes": Object {
            "6": Object {
              "id": 6,
              "text": "2",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render render correctly 1`] = `
Object {
  "children": Array [
    2,
  ],
  "id": 0,
  "nodes": Object {
    "2": Object {
      "children": Array [
        1,
      ],
      "id": 2,
      "nodes": Object {
        "1": Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      },
      "props": Object {
        "className": "foo",
      },
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render render native component correctly 1`] = `
Array [
  Object {
    "root.children": Array [
      1,
    ],
    "root.nodes.1": Object {
      "children": Array [],
      "id": 1,
      "props": Object {
        "className": "class",
        "fooBar": "fooBar",
        "onClick": "$$REMAX_METHOD_1_onClick",
      },
      "text": undefined,
      "type": "native-component",
    },
  },
]
`;

exports[`remax render renders conditional fragment correctly 1`] = `
Object {
  "children": Array [
    2,
    4,
  ],
  "id": 0,
  "nodes": Object {
    "2": Object {
      "children": Array [
        1,
      ],
      "id": 2,
      "nodes": Object {
        "1": Object {
          "id": 1,
          "text": "one",
          "type": "plain-text",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
    "4": Object {
      "children": Array [
        3,
      ],
      "id": 4,
      "nodes": Object {
        "3": Object {
          "id": 3,
          "text": "two",
          "type": "plain-text",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders conditional fragment correctly 2`] = `
Object {
  "children": Array [
    2,
  ],
  "id": 0,
  "nodes": Object {
    "2": Object {
      "children": Array [
        1,
      ],
      "id": 2,
      "nodes": Object {
        "1": Object {
          "id": 1,
          "text": "foo",
          "type": "plain-text",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders empty style 1`] = `
Object {
  "children": Array [
    2,
  ],
  "id": 0,
  "nodes": Object {
    "2": Object {
      "children": Array [
        1,
      ],
      "id": 2,
      "nodes": Object {
        "1": Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      },
      "props": Object {
        "style": "",
      },
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders style 1`] = `
Object {
  "children": Array [
    2,
  ],
  "id": 0,
  "nodes": Object {
    "2": Object {
      "children": Array [
        1,
      ],
      "id": 2,
      "nodes": Object {
        "1": Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      },
      "props": Object {
        "style": "width:100rpx;height:100rpx;",
      },
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render renders vendor prefix style 1`] = `
Object {
  "children": Array [
    2,
  ],
  "id": 0,
  "nodes": Object {
    "2": Object {
      "children": Array [
        1,
      ],
      "id": 2,
      "nodes": Object {
        "1": Object {
          "id": 1,
          "text": "hello",
          "type": "plain-text",
        },
      },
      "props": Object {
        "style": "-webkit-line-clamp:2;height:100rpx;",
      },
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render umount component 1`] = `
Object {
  "children": Array [
    3,
  ],
  "id": 0,
  "nodes": Object {
    "3": Object {
      "children": Array [
        2,
      ],
      "id": 3,
      "nodes": Object {
        "2": Object {
          "children": Array [
            1,
          ],
          "id": 2,
          "nodes": Object {
            "1": Object {
              "id": 1,
              "text": "foo",
              "type": "plain-text",
            },
          },
          "props": Object {},
          "text": undefined,
          "type": "view",
        },
      },
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;

exports[`remax render umount component 2`] = `
Object {
  "children": Array [
    3,
  ],
  "id": 0,
  "nodes": Object {
    "3": Object {
      "children": Array [],
      "id": 3,
      "props": Object {},
      "text": undefined,
      "type": "view",
    },
  },
  "props": undefined,
  "text": undefined,
  "type": "root",
}
`;
